--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,7 @@
     border: 1px black solid;
     border-radius: 3px;
 }
-.ahem {
+.fix-margin {
     margin: 10px;
 }
 div h3 {
@@ -58,5 +58,8 @@ h5 {
 }
 .clear {
     height: 100px;
-    background-color: red;
+    background-color: #607d8b;
+    width : 100%;
+    border: 1px black solid;
+    border-radius: 3px;
 }
